--- a/frontend-angular-2/social-network/src/index.html
+++ b/frontend-angular-2/social-network/src/index.html
@@ -15,8 +15,13 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+
+
 </head>
 <body>
+    
     <app-root></app-root>
 </body>
 </html>
